Closed Bug 1482825 Opened 6 years ago Closed 6 years ago

mousemove event is not triggered when in a scrollbar

Categories

(Core :: DOM: Events, defect, P2)

55 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla64
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- wontfix
firefox61 --- wontfix
firefox62 --- wontfix
firefox63 --- verified
firefox64 --- verified

People

(Reporter: raypapworth, Assigned: botond)

References

Details

(Keywords: parity-chrome, parity-edge, regression)

Attachments

(2 files)

Attached file scrollbarbug.html
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:63.0) Gecko/20100101 Firefox/63.0
Build ID: 20180812220618

Steps to reproduce:

run test program https://www.pgdp.org/~rp31/b/scrollbarbug.html


Actual results:

number shown does not increment when mouse moves in a scrollbar.


Expected results:

number shown should always increment when mouse moves (as in chrome and edge)
Component: Untriaged → DOM: Events
Product: Firefox → Core
It regressed since version 55
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Version: 63 Branch → 55 Branch
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=525fb3e1314b9da3d86c0f68c7bb76301eaae1bb&tochange=4dd4e37e40f7503ab157f70c643aaf9dedd5d469

Regressed by: Bug 1365761

:botond,
Your patch seems to cause the regression, could you please look into this?
Blocks: 1365761
Flags: needinfo?(botond)
The intent in bug 1365761 was to bring our behaviour closer to that of other browsers, by not dispatching mouse-move events to web content while a scrollbar drag is in progress.

However, we overshot, and stopped dispatching mouse-move events to web content whenever the mouse is over the scrollbar track, not just when the scrollbar is being dragged.
Flags: needinfo?(botond)
Assignee: nobody → botond
Otherwise, if the mouse is just moving over the scrollbar, mouse-move
events are dispatched to web content.
I verified that the attached patch fixes the problem in this testcase, and does not regress the testcase in bug 1365761.
Comment on attachment 9005733 [details]
Bug 1482825 - Only prevent dispatching mouse-move events targeted at a slider frame to web content, if the scrollbar is being dragged. r=smaug

Olli Pettay [:smaug] has approved the revision.
Attachment #9005733 - Flags: review+
Priority: -- → P2
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/14d31406c274
Only prevent dispatching mouse-move events targeted at a slider frame to web content, if the scrollbar is being dragged. r=smaug
https://hg.mozilla.org/mozilla-central/rev/14d31406c274
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Flags: qe-verify+
Botond, are you considering an uplift to beta for this 63 regression? We could take it early in the cycle. Thanks
Flags: needinfo?(botond)
Reproduced the issue on the latest Firefox Beta 63.0b3 (build ID: 20180904170936) on Windows 10. I cannot reproduce the issue on Mac and Ubuntu since the scrollbars are missing from the test-page provided by the user. 


On the latest Nightly 64.0a1 (2018-09-07) - Windows 10 - the issue is fixed as the mouse movement is registered on the scrollbars too. 

Botond, can you please clarify if this is a Windows platform specific issue only or the missing scrollbars from the test case on Mac and Ubuntu (note that on Ubuntu, the scrollbars appear on Chrome) might be separate issues?
(In reply to Timea Babos from comment #10)
> Reproduced the issue on the latest Firefox Beta 63.0b3 (build ID:
> 20180904170936) on Windows 10. I cannot reproduce the issue on Mac and
> Ubuntu since the scrollbars are missing from the test-page provided by the
> user. 
> 
> 
> On the latest Nightly 64.0a1 (2018-09-07) - Windows 10 - the issue is fixed
> as the mouse movement is registered on the scrollbars too. 
> 
> Botond, can you please clarify if this is a Windows platform specific issue
> only or the missing scrollbars from the test case on Mac and Ubuntu (note
> that on Ubuntu, the scrollbars appear on Chrome) might be separate issues?

The scrollable element on the test page doesn't actually have a scroll range, so there is no scrollbar thumb, only an empty scrollbar track.

On platforms with "overlay scrollbars", scrollbar tracks are not drawn, so if there is just an empty scrollbar track, then nothing is visible. This includes Mac, and I guess Ubuntu with GNOME these days? (KDE has regular scrollbars, so the issue reproduces there too, it's not Windows-specific).
Flags: needinfo?(botond)
Comment on attachment 9005733 [details]
Bug 1482825 - Only prevent dispatching mouse-move events targeted at a slider frame to web content, if the scrollbar is being dragged. r=smaug

Yup, this is a good candidate for uplift.

Approval Request Comment
[Feature/Bug causing the regression]:
  Bug 1365761

[User impact if declined]:
  Behaviour of mouse event dispatch differs from other browsers
  (no mouse events fired when mouse is over a scrollbar track).

[Is this code covered by automated tests?]:
  Not that I'm aware of.

[Has the fix been verified in Nightly?]:
  Yup

[Needs manual test from QE? If yes, steps to reproduce]: 
  No

[List of other uplifts needed for the feature/fix]:
  None

[Is the change risky?]:
  Very low risk

[Why is the change risky/not risky?]:
  It's a one-line targeted change whose impact is
  well-understood.

[String changes made/needed]:
  None
Attachment #9005733 - Flags: approval-mozilla-beta?
Comment on attachment 9005733 [details]
Bug 1482825 - Only prevent dispatching mouse-move events targeted at a slider frame to web content, if the scrollbar is being dragged. r=smaug

Uplift approved for 63 beta 5.
Attachment #9005733 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Marking the issue as Verified - Fixed on FF 64 based on Comment 10 and Comment 11.
Verified - Fixed on the latest Beta 63.0b6 (64-bit) on Windows 7/10, Ubuntu 16.04 and Mac OS 10.13.

Based on Comment 15 and Comment 16, marking this issue as Verified - Fixed.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: